# shunya_arcade

./: .gitignore  README.md  railway.json  railway.toml
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py  models.py  schemas.py
backend/app/api/: __init__.py  auth.py  games.py  leaderboards.py  profile.py  scores.py  sessions.py
backend/app/core/: auth.py  config.py  database.py
backend/app/games/: base.py
backend/app/games/bubble/: __init__.py
backend/app/games/dino/: __init__.py
backend/app/games/flappy/: __init__.py
backend/app/games/memory/: __init__.py
backend/app/games/oil_crisis/: __init__.py
backend/app/games/snake/: __init__.py
backend/app/static/: index.html
backend/app/static/assets/: index-4Gr3TZdX.css  index-C2o1l6PI.js  index-DP-AzoNH.js  index-N7BjTQ3_.css  index-THov5-Ko.js
frontend/: .env.example  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: index.ts
frontend/src/components/: Navbar.css  Navbar.tsx
frontend/src/games/bubble/: BubbleGame.css  BubbleGame.tsx
frontend/src/games/dino/: DinoGame.tsx
frontend/src/games/flappy/: FlappyGame.tsx
frontend/src/games/memory/: MemoryGame.tsx
frontend/src/games/oil_crisis/: OilCrisisGame.tsx
frontend/src/pages/: GameRoomPage.css  GameRoomPage.tsx  LeaderboardPage.css  LeaderboardPage.tsx  LobbyPage.css  LobbyPage.tsx  LoginPage.css  LoginPage.tsx  ProfilePage.css  ProfilePage.tsx
frontend/src/store/: authStore.ts
supabase/: schema.sql
(+1 files in other folders)
